# elepages

./: .gitignore  Cargo.toml  Makefile
examples/: Makefile
examples/stages/: multi_level_template.yaml  partial_template.yaml  simple_template.yaml
src/: lib.rs  main.rs  pages_error.rs  str_error.rs
src/cli/: commands.rs  execute.rs  fs_writer.rs  mod.rs  writer.rs
src/commands/: mod.rs  npm.rs
src/config/: mod.rs  values.rs  values_test.rs
src/maker/: config.rs  config_test.rs  make.rs  make_test.rs  mod.rs
src/pages/: bundle_index.rs  bundle_index_test.rs  env.rs  env_test.rs  fs_loader.rs  fs_loader_test.rs  fs_page.rs  loader.rs  loader_error.rs  metadata.rs  metadata_test.rs  mod.rs  page.rs  page_test.rs  pages_error.rs  selector.rs  selector_test.rs  test_page.rs
src/remote/: git.rs  mod.rs
src/stages/: append_stage.rs  append_stage_test.rs  compose_stage.rs  compose_stage_test.rs  copy_cut_stage.rs  copy_cut_stage_test.rs  copy_stage.rs  copy_stage_test.rs  git_authors.rs  git_authors_test.rs  git_metadata.rs  git_metadata_test.rs  handlebars_dir_lookup.rs  handlebars_registry_helpers.rs  handlebars_registry_helpers_test.rs  handlebars_stage.rs  handlebars_stage_npm_test.rs  handlebars_stage_test.rs  hbs_asset.rs  hbs_page.rs  hbs_registry_helpers.rs  hbs_stage.rs  hbs_stage_npm_test.rs  hbs_stage_test.rs  hbs_tpl_asset.rs  hbs_tpl_model.rs  indexes_stage.rs  indexes_stage_test.rs  md_stage.rs  md_stage_test.rs  metadata_tree.rs  metadata_tree_test.rs  mod.rs  path_generator_stage.rs  path_generator_stage_test.rs  replace_stage.rs  shadow_pages.rs  (+7 more)
(+43 files in other folders)
