[package]
name = "elepages"
version = "0.1.0"
authors = ["abissens <hichem.abissens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustassert = { git = "https://github.com/abissens/rustassert", branch = "main" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
rayon = "1.5"
pulldown-cmark = "0.8"
handlebars = "4.1"
git2 = "0.13"
indoc = "1.0"
regex = "1.5"
clap= "2"
chrono = "0.4"
url = "2.0"
home = "0.5"